--- a/app/src/main/res/layout/exception_item.xml
+++ b/app/src/main/res/layout/exception_item.xml
@@ -48,8 +48,8 @@
 
     <ImageButton
         android:id="@+id/delete_exception"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:background="?android:attr/selectableItemBackgroundBorderless"
